# data-science-quarto-template

./: LICENSE  README.md  copier.yml
{{ project_name }}/: README.md  pyproject.toml
{{ project_name }}/.github/workflows/: render.yml
{{ project_name }}/code/: src.py
{{ project_name }}/data/: data.csv
{{ project_name }}/output/: results.csv
{{ project_name }}/reports/: _quarto.yml  example.ipynb
